--- a/src/ncpes_analysis.Rmd
+++ b/src/ncpes_analysis.Rmd
@@ -221,6 +221,19 @@ data_frame(OverallRating=cpes$Q59,
 ```
 
 
+How many are clearly assigned to one cluster?
+
+```{r}
+sum(apply(clustering$class_prob, 1, function(row) max(row)) > 0.8) / nrow(clustering$class_prob)
+tmp <- apply(clustering$class_prob, 1, function(row) sort(row, decreasing = TRUE)[1:3])
+hist(tmp[1, ])
+hist(tmp[2, ])
+hist(tmp[3, ])
+sum(tmp[3, ] > 0.1)  / nrow(clustering$class_prob)
+```
+
+
+
 # Plot defininig features
 
 ```{r}
